--- a/css/_nav-design.scss
+++ b/css/_nav-design.scss
@@ -1,5 +1,5 @@
 #sidenav {
-  height: 100%;
+  min-height: 100%;
   position: fixed;
   z-index: 10;
   top: 0;
@@ -48,7 +48,7 @@
 #sidenav a {
   padding: 8px 8px 8px 23px;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 20px;
   color: $sidenav-main;
   display: block;
   font-family: montserrat;
