--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,8 @@
 body {
   overflow-x: hidden;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  background-color: #2b2b2b; }
 
 .s-1 {
   width: 8.33%; }
@@ -313,7 +314,7 @@ body {
 #main {
   position: relative;
   overflow-x: hidden;
-  min-height: 100vh;
+  min-height: calc(100vh - 494px);
   width: 100vw;
   z-index: 20;
   background-color: whitesmoke; }
@@ -368,7 +369,7 @@ body {
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 15px;
-  padding-bottom: 15px; }
+  padding-bottom: 35px; }
 
 .footer-left {
   order: 2; }
@@ -409,7 +410,7 @@ body {
     order: 2; }
 
   #date-day1, #date-day2, #date-month, #date-year {
-    font-size: 80px !important; }
+    font-size: 70px !important; }
 
   .date-bar {
     height: 5px !important; } }
@@ -423,20 +424,37 @@ body {
   #footer-container {
     width: calc(100vw - 100px); } }
 #contact-container {
-  color: white;
-  font-size: 40px;
   position: absolute;
   bottom: 0px;
   right: 0px;
   margin-bottom: 25px;
   padding-right: 15px; }
+  #contact-container a {
+    color: white;
+    font-size: 40px;
+    padding-left: 5px; }
 
 #footer-text {
+  display: block;
   color: white;
   font-family: opensans;
-  font-size: 16px; }
-  #footer-text #footer-text-3 {
-    font-size: 12px;
-    line-height: 16px; }
+  font-size: 16px;
+  padding-top: 20px; }
+  #footer-text .footer-text-1 {
+    font-family: montserrat;
+    font-size: 26px; }
+  #footer-text .footer-text-2 {
+    font-family: opensans;
+    font-size: 18px; }
+  #footer-text .footer-text-3 {
+    font-family: montserrat;
+    font-size: 18px; }
+  #footer-text .footer-text-4 {
+    font-size: 16px; }
+    #footer-text .footer-text-4 a {
+      color: white;
+      font-family: opensans;
+      font-size: 16px;
+      text-decoration: none; }
 
 /*# sourceMappingURL=main.css.map */
