--- a/css/main.css
+++ b/css/main.css
@@ -138,7 +138,8 @@ body {
   overflow-x: hidden;
   padding-top: 25px;
   transition: 0.5s;
-  white-space: nowrap; }
+  white-space: nowrap;
+  will-change: transform; }
 
 #sidenav:after {
   box-shadow: -3px 0px 6px rgba(0, 0, 0, 0.16), -3px 0px 6px rgba(0, 0, 0, 0.23);
@@ -287,7 +288,8 @@ body {
   min-height: calc(100vh - 494px);
   width: 100vw;
   z-index: 20;
-  background-color: whitesmoke; }
+  background-color: whitesmoke;
+  will-change: transform; }
 
 .container {
   width: 100vw;
