added captions to slideshow

--- a/css/main.css
+++ b/css/main.css
@@ -441,7 +441,9 @@ body {
 
 #slideshow-container {
   position: relative;
-  z-index: 41; }
+  z-index: 41;
+  min-height: 500px;
+  height: calc(100vh - 200px); }
 
 .slideshow:after {
   position: absolute;
@@ -491,7 +493,9 @@ body {
   animation-delay: 30s; }
 
 .overlay {
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   min-height: 500px;
   height: calc(100vh - 200px);
@@ -524,6 +528,101 @@ body {
   background: repeating-linear-gradient(-45deg, transparent 0%, transparent 85%, #56abd6 85%, #56abd6 95%, transparent 95%, transparent 100%);
   animation-delay: 2.1s; }
 
+#home-top, #home-bottom {
+  padding-left: 5%;
+  padding-right: 5%;
+  position: relative;
+  z-index: 42;
+  min-height: 250px;
+  height: 50%;
+  width: 100%;
+  opacity: 0;
+  animation: homeAnimation 1s cubic-bezier(0.645, 0.045, 0.355, 1) 1s forwards; }
+
+#home-top #date-day1, #home-top #date-day2, #home-top #date-month, #home-top #date-year {
+  color: white;
+  font-family: montserrat;
+  font-size: 50px;
+  font-size: 12vw; }
+#home-top #date-place, #home-top #date-time {
+  color: white;
+  font-family: montserrat;
+  font-size: 20px;
+  font-size: 5vw; }
+#home-top .date-container {
+  float: right;
+  clear: both;
+  max-width: 700px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin: 0; }
+  #home-top .date-container .date-bar {
+    flex-grow: 1;
+    height: 1px;
+    height: .5vw;
+    background-color: white;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 20px;
+    margin-right: 20px; }
+@media only screen and (min-width: 768px) {
+  #home-top #date-day1, #home-top #date-day2, #home-top #date-month, #home-top #date-year {
+    font-size: 80px !important; }
+  #home-top #date-place, #home-top #date-time {
+    font-size: 20px !important; }
+  #home-top .date-bar {
+    height: 5px !important; } }
+@media only screen and (min-width: 1060px) {
+  #home-top #date-day1, #home-top #date-day2, #home-top #date-month, #home-top #date-year {
+    font-size: 100px !important; }
+  #home-top #date-place, #home-top #date-time {
+    font-size: 40px !important; }
+  #home-top .date-bar {
+    height: 5px !important; } }
+
+#link-container {
+  position: absolute;
+  bottom: 20px; }
+
+#link-visitors, #link-companies, #link-visitors span, #link-companies span, #link-companies a, #link-visitors a {
+  text-decoration: none;
+  text-decoration-color: transparent;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: white;
+  font-family: montserrat;
+  font-size: 18px; }
+
+#link-companies a, #link-visitors a {
+  transition: color 0.5s cubic-bezier(0.645, 0.045, 0.355, 1), transform 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transform: translate3d(0, 0, 0);
+  display: block; }
+  #link-companies a span, #link-visitors a span {
+    text-decoration: underline;
+    text-decoration-color: transparent;
+    transition: color 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
+    transition: text-decoration-color 0.5s cubic-bezier(0.645, 0.045, 0.355, 1); }
+
+#link-companies a:hover, #link-visitors a:hover {
+  color: #e56b2e;
+  transform: translate3d(15px, 0, 0) !important; }
+  #link-companies a:hover span, #link-visitors a:hover span {
+    text-decoration: underline;
+    text-decoration-color: #e56b2e; }
+
+@media only screen and (min-width: 768px) {
+  #link-visitors, #link-companies, #link-visitors span, #link-companies span, #link-companies a, #link-visitors a {
+    font-size: 20px !important; } }
+@media only screen and (min-width: 1060px) {
+  #link-container {
+    bottom: 100px; }
+
+  #link-visitors, #link-companies, #link-visitors span, #link-companies span, #link-companies a, #link-visitors a {
+    font-size: 30px !important; } }
 @keyframes imageAnimation {
   0% {
     opacity: 0;
@@ -545,5 +644,11 @@ body {
     transform: translate3d(100vh, -100vh, 0); }
   100% {
     transform: translate3d(0, 0, 0); } }
+@keyframes homeAnimation {
+  0% {
+    opacity: 0;
+    animation-timing-function: ease-out; }
+  100% {
+    opacity: 1; } }
 
 /*# sourceMappingURL=main.css.map */
