--- a/css/_slideshow.scss
+++ b/css/_slideshow.scss
@@ -12,31 +12,11 @@
 #slideshow-container {
   position: relative;
   z-index: 41;
+  min-height: 500px;
+  height: calc(100vh - 200px);
 }
 
 
-// .slideshow:before {
-//   position: absolute;
-//   width: 100%;
-//   height: 100%;
-//   top: 0px;
-//   left: 0px;
-//   z-index: 1;
-//   content: '';
-//   background: repeating-linear-gradient(-45deg,
-//   transparent 0%,
-//   transparent 5%,  $ct-orange 5%,
-//   $ct-orange 15%,  transparent 15%,
-//   transparent 25%,  $ct-orange 25%,
-//   $ct-orange 30%,  transparent 30%,
-//   transparent 70%,  $ct-blue 70%,
-//   $ct-blue 75%,  transparent 75%,
-//   transparent 85%, $ct-blue 85%,
-//   $ct-blue 95%,    transparent 95%,
-//   transparent 100%);
-//
-//   animation: overlayAnimation .5s linear 2s 1;
-// }
 
 .slideshow:after {
   position: absolute;
@@ -96,7 +76,9 @@
 
 
 .overlay {
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   min-height: 500px;
   height: calc(100vh - 200px);
@@ -156,6 +138,159 @@
 
 
 
+#home-top, #home-bottom {
+  padding-left: 5%;
+  padding-right: 5%;
+  position: relative;
+  z-index: 42;
+  min-height: 250px;
+  height: 50%;
+  width: 100%;
+  opacity: 0;
+  animation: homeAnimation 1s cubic-bezier(0.645, 0.045, 0.355, 1) 1s forwards;
+}
+
+#home-top {
+
+  #date-day1, #date-day2, #date-month, #date-year {
+    color: $text-white;
+    font-family: montserrat;
+    font-size: 50px;
+    font-size: 12vw;
+  }
+
+  #date-place, #date-time {
+    color: $text-white;
+    font-family: montserrat;
+    font-size: 20px;
+    font-size: 5vw;
+  }
+
+  .date-container {
+    float: right;
+    clear: both;
+    max-width: 700px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin: 0;
+
+    .date-bar {
+      flex-grow: 1;
+      height: 1px;
+      height: .5vw;
+      background-color: $text-white;
+      margin-top: auto;
+      margin-bottom: auto;
+      margin-left: 20px;
+      margin-right: 20px;
+    }
+  }
+
+
+  @media only screen and (min-width: $bp-large) {
+
+    #date-day1, #date-day2, #date-month, #date-year {
+      font-size: 80px !important;
+    }
+
+    #date-place, #date-time {
+      font-size: 20px !important;
+    }
+
+    .date-bar {
+      height: 5px !important;
+    }
+  }
+
+
+  @media only screen and (min-width: $bp-max + $sidenav-width_closed) {
+
+    #date-day1, #date-day2, #date-month, #date-year {
+      font-size: 100px !important;
+    }
+
+    #date-place, #date-time {
+      font-size: 40px !important;
+    }
+
+    .date-bar {
+      height: 5px !important;
+    }
+
+  }
+}
+
+
+#link-container {
+  position: absolute;
+  bottom: 20px;
+}
+
+
+#link-visitors, #link-companies, #link-visitors span, #link-companies span, #link-companies a, #link-visitors a {
+  text-decoration: none;
+  text-decoration-color: transparent;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: $text-white;
+  font-family: montserrat;
+  font-size: 18px;
+}
+
+
+#link-companies a, #link-visitors a {
+  span {
+    text-decoration: underline;
+    text-decoration-color: transparent;
+    transition: color $slideshow_link-transition;
+    transition: text-decoration-color $slideshow_link-transition;
+  }
+  transition: color $slideshow_link-transition, transform $slideshow_link-transition;
+  transform: translate3d(0, 0, 0);
+  display: block;
+
+}
+#link-companies a:hover, #link-visitors a:hover {
+  color: $ct-orange;
+  transform: translate3d(15px, 0, 0) !important;
+
+  span {
+    text-decoration: underline;
+    text-decoration-color: $ct-orange;
+  }
+
+}
+
+
+
+@media only screen and (min-width: $bp-large) {
+
+
+  #link-visitors, #link-companies, #link-visitors span, #link-companies span, #link-companies a, #link-visitors a {
+    font-size: 20px !important;
+  }
+}
+
+
+@media only screen and (min-width: $bp-max + $sidenav-width_closed) {
+
+
+  #link-container {
+    bottom: 100px;
+  }
+
+  #link-visitors, #link-companies, #link-visitors span, #link-companies span, #link-companies a, #link-visitors a {
+    font-size: 30px !important;
+  }
+}
+
+
+
+
 
 
 @keyframes imageAnimation {
@@ -188,5 +323,16 @@
   }
   100% {
     transform: translate3d(0, 0, 0);
+  }
+}
+
+
+@keyframes homeAnimation {
+  0% {
+    opacity: 0;
+    animation-timing-function: ease-out;
+  }
+  100% {
+    opacity: 1;
   }
 }
