--- a/css/main.css
+++ b/css/main.css
@@ -537,7 +537,8 @@ body {
   height: 50%;
   width: 100%;
   opacity: 0;
-  animation: homeAnimation 1s cubic-bezier(0.645, 0.045, 0.355, 1) 1s forwards; }
+  animation: homeAnimation 1s cubic-bezier(0.645, 0.045, 0.355, 1) forwards;
+  animation-delay: 2.25s; }
 
 #home-top #date-day1, #home-top #date-day2, #home-top #date-month, #home-top #date-year {
   color: white;
