added styling for navigation links and language switching support

--- a/css/_slideshow.scss
+++ b/css/_slideshow.scss
@@ -256,7 +256,7 @@
 
 }
 #link-companies a:hover, #link-visitors a:hover {
-  color: $ct-orange;
+  // color: $ct-orange;
   transform: translate3d(15px, 0, 0) !important;
 
   span {
