--- a/css/_nav-design.scss
+++ b/css/_nav-design.scss
@@ -10,6 +10,39 @@
   transition: 0.5s;
   white-space: nowrap;
   will-change: transform;
+
+  .sidenav-link {
+    padding: 8px 8px 8px 20px;
+    text-decoration: none;
+    font-size: 20px;
+    color: $sidenav-main;
+    background-color: inherit;
+    display: block;
+    font-family: montserrat;
+    transition: color $sidenav_link-transition, transform $sidenav_link-transition;
+    transform: translate3d(0,0,0);
+  }
+
+  .sidenav-link:hover:before {
+    content: '/';
+    position: fixed;
+    animation: navpseudoAnimation $sidenav_link-transition;
+    animation-fill-mode: both;
+  }
+
+  .sidenav-link:hover {
+    color: $ct-orange;
+    transform: translate3d(10px,0,0);
+  }
+
+
+  #active {
+    color: $text-white;
+  }
+
+  #active:hover {
+    color: $ct-blue;
+  }
 }
 
 
@@ -46,16 +79,6 @@
 }
 
 
-#sidenav a {
-  padding: 8px 8px 8px 23px;
-  text-decoration: none;
-  font-size: 20px;
-  color: $sidenav-main;
-  display: block;
-  font-family: montserrat;
-}
-
-
 #sidenav-logo {
   margin-left: auto;
   margin-right: auto;
@@ -84,6 +107,52 @@
     opacity: 1.0 !important;
   }
 }
+
+
+
+#sidenav-language {
+  width: $sidenav-width_opened;
+  text-align: center;
+  font-family: montserrat;
+  color: $sidenav-main;
+
+  a {
+    text-decoration: none;
+    font-family: montserrat;
+    color: $sidenav-main;
+    transition: color $sidenav_link-transition;
+  }
+
+  a:hover {
+    color: $ct-orange;
+  }
+
+  #active {
+    color: $text-white;
+  }
+
+  #active:hover {
+    color: $ct-blue;
+  }
+
+}
+
+
+
+
+@media only screen and (min-width: $bp-medium) {
+  #sidenav-language {
+    width: $sidenav-width_closed;
+  }
+}
+
+
+
+
+
+
+
+
 
 
 
@@ -121,4 +190,23 @@
   height: 1px;
   flex-grow: 1;
   background-color: $topnav-main;
+}
+
+
+
+
+
+
+
+
+
+@keyframes navpseudoAnimation {
+  0% {
+    color: transparent;
+    transform: translate3d(0,0,0);
+  }
+  100% {
+    color: inherit;
+    transform: translate3d(-10px,0,0);
+  }
 }
