--- a/css/main.scss
+++ b/css/main.scss
@@ -39,6 +39,7 @@ $navbar-height: 50px; //height of navbar in mobile design
 $sidenav-transition: transform 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
 $sidenav_logo-transition: opacity 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0.5s;
 $slideshow_link-transition: 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
+$sidenav_link-transition: 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
 
 $ct-gray: #2b2b2b;
 $ct-orange: rgba(229,107,46,1);
