--- a/css/_general.scss
+++ b/css/_general.scss
@@ -12,6 +12,14 @@ body {
   background-color: $ct-gray;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
 
 
 
