--- a/css/main.scss
+++ b/css/main.scss
@@ -65,4 +65,4 @@ $sidenav-boxshadow: -3px 0px 6px rgba(0,0,0,0.16), -3px 0px 6px rgba(0,0,0,0.23)
 @import "nav-functionality";
 @import "content";
 @import "footer";
-@import "slideshow";
+@import "home";
