--- a/css/main.css
+++ b/css/main.css
@@ -776,5 +776,42 @@ a {
     animation-timing-function: ease-out; }
   100% {
     opacity: 1; } }
+.infobox-container {
+  height: 350px; }
+  .infobox-container .infobox {
+    position: relative;
+    z-index: 20;
+    width: calc(100% - 30px);
+    height: calc(100% - 30px);
+    margin: 15px;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: none;
+    z-index: 10; }
+    .infobox-container .infobox .infoboxtext {
+      position: relative;
+      top: 15px;
+      z-index: 35;
+      margin: 15px;
+      padding: 5px;
+      background-color: #e56b2e;
+      color: white; }
+  .infobox-container #fair {
+    background-image: url(/img/slideshow/1.jpg); }
+  .infobox-container #companies {
+    background-image: url(/img/slideshow/2.jpg); }
+  .infobox-container #archive {
+    background-image: url(/img/slideshow/3.jpg); }
+  .infobox-container #aboutus {
+    background-image: url(/img/slideshow/6.jpg); }
+  .infobox-container .infobox:after {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    z-index: 30;
+    content: '';
+    background: transparent url(/img/slideshow/pattern.png) repeat top left; }
 
 /*# sourceMappingURL=main.css.map */
