--- a/css/_home.scss
+++ b/css/_home.scss
@@ -351,8 +351,9 @@
   height: 350px;
 
   .infobox {
+    display: block;
     position: relative;
-    z-index: 20;
+    z-index: 10;
     width: calc(100% - 30px);
     height: calc(100% - 30px);
     margin: 15px;
@@ -363,41 +364,82 @@
 
     .infoboxtext {
       position: relative;
-      top: 15px;
+      display: inline-block;
       z-index: 35;
       margin: 15px;
       padding: 5px;
       background-color: $ct-orange;
       color: $text-white;
+      font-family: montserrat;
+      font-size: 20px;
+
+      span {
+        font-family: opensans;
+        font-size: 16px;
     }
+
+      span:nth-child(3) {
+        text-decoration: underline;
+        text-decoration-color: transparent;
+        transition: text-decoration-color $infobox-transition;
+    }
+
   }
 
-  #fair {
-    background-image: url(/img/slideshow/1.jpg);
+  .blue {
+    background-color: $ct-blue;
   }
 
-  #companies {
-    background-image: url(/img/slideshow/2.jpg);
+  .orange {
+    background-color: $ct-orange;
   }
+}
 
-  #archive {
-    background-image: url(/img/slideshow/3.jpg);
-  }
+#fair {
+  background-image: url(/img/slideshow/1.jpg);
+}
 
-  #aboutus {
-    background-image: url(/img/slideshow/6.jpg);
-  }
+#companies {
+  background-image: url(/img/slideshow/2.jpg);
+}
+
+#news {
+  background-image: url(/img/slideshow/3.jpg);
+}
+
+#aboutus {
+  background-image: url(/img/slideshow/6.jpg);
+}
 
 
-  .infobox:after {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0px;
-    left: 0px;
-    z-index: 30;
-    content: '';
-    background: transparent url(/img/slideshow/pattern.png) repeat top left;
-  }
+.infobox:after {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: 30;
+  opacity: 1;
+  transition: opacity $infobox-transition;
+  content: '';
+  background: transparent url(/img/slideshow/pattern.png) repeat top left;
+}
+
+.infobox:hover:after {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: 30;
+  opacity: 0;
+  content: '';
+  background: transparent url(/img/slideshow/pattern.png) repeat top left;
+}
+
+.infobox:hover span:nth-child(3) {
+  text-decoration: underline;
+  text-decoration-color: $text-white;
+}
 
 }
