--- a/css/main.css
+++ b/css/main.css
@@ -779,8 +779,9 @@ a {
 .infobox-container {
   height: 350px; }
   .infobox-container .infobox {
+    display: block;
     position: relative;
-    z-index: 20;
+    z-index: 10;
     width: calc(100% - 30px);
     height: calc(100% - 30px);
     margin: 15px;
@@ -790,17 +791,30 @@ a {
     z-index: 10; }
     .infobox-container .infobox .infoboxtext {
       position: relative;
-      top: 15px;
+      display: inline-block;
       z-index: 35;
       margin: 15px;
       padding: 5px;
       background-color: #e56b2e;
-      color: white; }
+      color: white;
+      font-family: montserrat;
+      font-size: 20px; }
+      .infobox-container .infobox .infoboxtext span {
+        font-family: opensans;
+        font-size: 16px; }
+      .infobox-container .infobox .infoboxtext span:nth-child(3) {
+        text-decoration: underline;
+        text-decoration-color: transparent;
+        transition: text-decoration-color 0.5s cubic-bezier(0.645, 0.045, 0.355, 1); }
+    .infobox-container .infobox .blue {
+      background-color: #56abd6; }
+    .infobox-container .infobox .orange {
+      background-color: #e56b2e; }
   .infobox-container #fair {
     background-image: url(/img/slideshow/1.jpg); }
   .infobox-container #companies {
     background-image: url(/img/slideshow/2.jpg); }
-  .infobox-container #archive {
+  .infobox-container #news {
     background-image: url(/img/slideshow/3.jpg); }
   .infobox-container #aboutus {
     background-image: url(/img/slideshow/6.jpg); }
@@ -811,7 +825,22 @@ a {
     top: 0px;
     left: 0px;
     z-index: 30;
+    opacity: 1;
+    transition: opacity 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
     content: '';
     background: transparent url(/img/slideshow/pattern.png) repeat top left; }
+  .infobox-container .infobox:hover:after {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    z-index: 30;
+    opacity: 0;
+    content: '';
+    background: transparent url(/img/slideshow/pattern.png) repeat top left; }
+  .infobox-container .infobox:hover span:nth-child(3) {
+    text-decoration: underline;
+    text-decoration-color: white; }
 
 /*# sourceMappingURL=main.css.map */
