--- a/css/main.css
+++ b/css/main.css
@@ -373,6 +373,37 @@ a {
   text-align: justify;
   padding: 15px; }
 
+.image {
+  background-image: url(/img/slideshow/1.jpg);
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: none; }
+
+.patterned {
+  background: rgba(255, 255, 255, 0.25) url(/img/slideshow/pattern.png) repeat top left; }
+
+.image-container {
+  padding: 15px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-left: auto;
+  margin-right: auto; }
+  .image-container span {
+    color: white;
+    font-family: montserrat;
+    font-size: 50px; }
+  .image-container .bar {
+    flex-grow: 1;
+    height: 2px;
+    background-color: white;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 20px;
+    margin-right: 20px; }
+
 .title {
   position: relative;
   max-width: 1100px;
