implemented more content on /fair

--- a/css/_fonts.scss
+++ b/css/_fonts.scss
@@ -6,6 +6,13 @@
 }
 
 @font-face {
+	font-family: 'opensans-bold';
+	src: url('/css/fonts/Open_Sans/OpenSans-SemiBold.ttf');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
 	font-family: 'montserrat';
 	src: url('/css/fonts/Montserrat/Montserrat-Regular.ttf');
 	font-weight: normal;
