--- a/css/main.scss
+++ b/css/main.scss
@@ -26,6 +26,8 @@
   order: $val;
 }
 
+$awss3: 'https://s3.eu-central-1.amazonaws.com/static.chemtogether.2018';
+
 $bp-max: 960px;
 $bp-large: 768px;
 $bp-medium: 600px;
