--- a/css/_home.scss
+++ b/css/_home.scss
@@ -26,7 +26,7 @@
   left: 0px;
   z-index: 0;
   content: '';
-  background: transparent url(https://s3.eu-central-1.amazonaws.com/static.chemtogether.2018/img/pattern.png) repeat top left;
+  background: transparent url(#{$awss3}/img/pattern.png) repeat top left;
 }
 
 
@@ -48,26 +48,26 @@
 
 
 .slideshow li:nth-child(1) span {
-  background-image: url(https://s3.eu-central-1.amazonaws.com/static.chemtogether.2018/img/1.jpg);
+  background-image: url(#{$awss3}/img/1.jpg);
 }
 .slideshow li:nth-child(2) span {
-  background-image: url(https://s3.eu-central-1.amazonaws.com/static.chemtogether.2018/img/2.jpg);
+  background-image: url(#{$awss3}/img/2.jpg);
   animation-delay: 6s;
 }
 .slideshow li:nth-child(3) span {
-  background-image: url(https://s3.eu-central-1.amazonaws.com/static.chemtogether.2018/img/3.jpg);
+  background-image: url(#{$awss3}/img/3.jpg);
   animation-delay: 12s;
 }
 .slideshow li:nth-child(4) span {
-  background-image: url(https://s3.eu-central-1.amazonaws.com/static.chemtogether.2018/img/4.jpg);
+  background-image: url(#{$awss3}/img/4.jpg);
   animation-delay: 18s;
 }
 .slideshow li:nth-child(5) span {
-  background-image: url(https://s3.eu-central-1.amazonaws.com/static.chemtogether.2018/img/5.jpg);
+  background-image: url(#{$awss3}/img/5.jpg);
   animation-delay: 24s;
 }
 .slideshow li:nth-child(6) span {
-  background-image: url(https://s3.eu-central-1.amazonaws.com/static.chemtogether.2018/img/6.jpg);
+  background-image: url(#{$awss3}/img/6.jpg);
   animation-delay: 30s;
 }
 
@@ -396,19 +396,19 @@
 }
 
 #fair {
-  background-image: url(/img/slideshow/1.jpg);
+  background-image: url(#{$awss3}/img/1.jpg);
 }
 
 #companies {
-  background-image: url(/img/slideshow/2.jpg);
+  background-image: url(#{$awss3}/img/2.jpg);
 }
 
 #news {
-  background-image: url(/img/slideshow/3.jpg);
+  background-image: url(#{$awss3}/img/3.jpg);
 }
 
 #aboutus {
-  background-image: url(/img/slideshow/6.jpg);
+  background-image: url(#{$awss3}/img/6.jpg);
 }
 
 
@@ -422,7 +422,7 @@
   opacity: 1;
   transition: opacity $infobox-transition;
   content: '';
-  background: transparent url(/img/slideshow/pattern.png) repeat top left;
+  background: transparent url(#{$awss3}/img/pattern.png) repeat top left;
 }
 
 .infobox:hover:after {
@@ -434,7 +434,7 @@
   z-index: 30;
   opacity: 0;
   content: '';
-  background: transparent url(/img/slideshow/pattern.png) repeat top left;
+  background: transparent url(#{$awss3}/img/pattern.png) repeat top left;
 }
 
 .infobox:hover span:nth-child(3) {
